# youtube-mcp

./: .env.example  .gitignore  README.md  advanced-features.txt  framework-usage.md  project-requirment.md  prompt  pyproject.toml  requirements.txt
examples/: README.md
examples/basic/: README.md  demo_client.py  individual_examples.py  interactive_demo.py  quick_test.py
examples/channel-comparison/: README.md  demo_scenarios.py  individual_examples.py  quick_test.py
examples/framework-integration/: README.md
examples/report-generation/: README.md  test_reports.py
examples/video-analytics/: README.md  test_analytics.py
src/youtube_mcp/: __init__.py  server.py
